# rent-price-model

./: .env  .gitignore  .pre-commit-config.yaml  EDA.ipynb  README.md  docker-compose.yml  main.py  pyproject.toml
data/cleaned/: rent_dataset_clean.csv
minio/.minio.sys/: format.json
mlflow/: mlflow.db
src/streamlit_app/: dockerfile  pyproject.toml
src/streamlit_app/src/: app.py
src/streamlit_app/src/pages/: 0_Home.py  1_EDA.py  2_Models.py  3_Predict.py  eda.html
src/train/: train.py
