[project]
name = "rent-price-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplot>=0.1.9",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py312"
exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

