[project]
name = "rent-price-streamlit"
version = "0.1.0"
description = "UI for rent price project"
authors = [{ name = "Nicolas Pietrocola", email = "nicolas.pietrocola@uma.es" }]

dependencies = [
    "streamlit>=1.44.1",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "dotenv>=0.9.9",
    "boto3>=1.39.4",
    "xgboost>=3.0.2",
    "lightgbm>=4.6.0"
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]